# py-pyspark-sample

./: README.md  pyproject.toml
py_pyspark_sample/: app.py
