[tool.poetry]
name = "py-pyspark-sample"
version = "0.1.0"
description = ""
authors = ["Adauto Cabral Torres <adauto.torres@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pyspark = "^3.5.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
